tests/errors/infinite-recursion.ja
procedure test()
    call test()

procedure main()
    call test()
